Fix white space between img and footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,8 +11,11 @@ body {
 
 }
 
+
+
 img {
   width: 100%;
+  display: block;
 }
 
 
@@ -66,8 +69,7 @@ img {
   background-color: #252525;
   width: 100%;
   height: 150px;
-  top: 0;
-  bottom: 0;
+  margin-top: 0;
   left: 0;
   border-top: 4px solid #aaaaaa;
   display: flex;
